--- a/compiled-C/Makefile
+++ b/compiled-C/Makefile
@@ -2,7 +2,9 @@ all:
 	make -f Makefile-sofile
 	rm -f c_example.o
 	make -f Makefile-main
+	make -f Makefile-main_as_class
 
 clean:
 	make -f Makefile-main   clean
 	make -f Makefile-sofile clean
+	make -f Makefile-main_as_class clean
