--- a/dlopen-C++-hardway-nonvirtual_methods/Makefile-main_as_functional
+++ b/dlopen-C++-hardway-nonvirtual_methods/Makefile-main_as_functional
@@ -1,12 +1,12 @@
-CXX=g++
-CXXFLAGS=-O2 -Wall
+CC=gcc
+CFLAGS=-O2 -Wall
 LDFLAGS=-s -ldl
 
 OBJS=example_main_as_functional.o
 TARGET=example_main_as_functional
 
 all: $(OBJS)
-	$(CXX) $(LDFLAGS) $(OBJS) -o $(TARGET)
+	$(CC) $(LDFLAGS) $(OBJS) -o $(TARGET)
 
 clean:
 	rm -f $(OBJS) $(TARGET)
