--- a/SWIG-C++/Makefile
+++ b/SWIG-C++/Makefile
@@ -1,8 +1,9 @@
 all:
 	make -f Makefile-LUAjit
 	make -f Makefile-Pypy
+	make -f Makefile-CSharp
 
 clean:
 	make -f Makefile-LUAjit clean
-	make -f Makefile-Pypy   clean
-	rm -rf __pycache__
+	make -f Makefile-Pypy   clean; rm -rf __pycache__
+	make -f Makefile-CSharp clean
