--- a/dlopen-C/Makefile
+++ b/dlopen-C/Makefile
@@ -4,11 +4,15 @@ all:
 
 	make -f Makefile-main
 	make -f Makefile-main_as_class
-	make -f Makefile-main_as_csharp
+
+	make -f Makefile-main_CSharp
+	make -f Makefile-main_as_class_CSharp
 
 clean:
 	make -f Makefile-sofile clean
 
-	make -f Makefile-main   clean
+	make -f Makefile-main clean
 	make -f Makefile-main_as_class clean
-	make -f Makefile-main_as_csharp clean
+
+	make -f Makefile-main_CSharp clean
+	make -f Makefile-main_as_class_CSharp clean
