--- a/withoutSWIG-C++/Makefile
+++ b/withoutSWIG-C++/Makefile
@@ -1,14 +1,7 @@
-PROJECT=cpp_example
-
-CXX=g++
-CXXFLAGS=-O2 -Wall -fpic
-LDFLAGS=-shared -s
-
-OBJS=$(PROJECT).o $(PROJECT)_c_wrapper.o
-TARGET=$(PROJECT).so
-
-all: $(OBJS)
-	$(CXX) $(LDFLAGS) $(OBJS) -o $(TARGET)
+all:
+	make -f Makefile-sofile
+	make -f Makefile-CSharp
 
 clean:
-	rm -f $(OBJS) $(TARGET)
+	make -f Makefile-sofile clean
+	make -f Makefile-CSharp clean
