--- a/compiled-C/Makefile-main_as_class
+++ b/compiled-C/Makefile-main_as_class
@@ -6,7 +6,7 @@ OBJS=example_main_as_class.o
 TARGET=example_main_as_class
 
 all: $(OBJS)
-	$(CXX) $(LDFLAGS) $(OBJS) -o $(TARGET)
+	$(CXX) $(OBJS) $(LDFLAGS) -o $(TARGET)
 
 clean:
 	rm -f $(OBJS) $(TARGET)
