--- a/compiled-C++/Makefile-main_as_functional
+++ b/compiled-C++/Makefile-main_as_functional
@@ -6,7 +6,7 @@ OBJS=example_main_as_functional.o
 TARGET=example_main_as_functional
 
 all: $(OBJS)
-	$(CXX) $(LDFLAGS) $(OBJS) -o $(TARGET)
+	$(CXX) $(OBJS) $(LDFLAGS) -o $(TARGET)
 
 clean:
 	rm -f $(OBJS) $(TARGET)
